--- a/Jeedle-C2/src/main/resources/static/views/templates/createMission.html
+++ b/Jeedle-C2/src/main/resources/static/views/templates/createMission.html
@@ -10,8 +10,8 @@
     </br>
     <tr>
         <td>
-            Args: <input type="text" id="arg" name="arg"
-                         ng-model="arg">
+            Add arg: <input type="text" id="arg" name="arg"
+                            ng-model="arg">
         </td>
         <td>
             <a class="pull-right btn btn-primary btn-xs" data-nodrag
@@ -21,13 +21,15 @@
             </a>
         </td>
     </tr>
-    <tr ng-repeat="argument in missionArgs">
-        <td>{{argument}}</td>
-        <td><a class="pull-right btn btn-danger btn-xs" data-nodrag
-               ng-click="removeArg(argument)"><span
-                class="glyphicon glyphicon-remove"></span></a>
-        </td>
-    </tr>
+    <table cellpadding="0" cellspacing="0" border="0">
+        <tr ng-repeat="argument in missionArgs track by $index">
+            <td><a class="pull-right btn btn-danger btn-xs" data-nodrag
+                   ng-click="removeArg(argument)"><span
+                    class="glyphicon glyphicon-remove"></span></a>
+            </td>
+            <td>{{argument}}</td>
+        </tr>
+    </table>
 </div>
 <div class="modal-footer">
     <button class="btn btn-success" ng-click="create()">Send</button>
